force-app/main/default/objects/NCMT_TCO_Performance_Input__c/NCMT_TCO_Performance_Input__c.object-meta.xml
<CustomObject>
    <label>TCO Performance Input</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Performance Input</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCO Performance Input</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>