force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Climate_Zone__c.field-meta.xml
<CustomField>
    <fullName>Climate_Zone__c</fullName>
    <label>Climate Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>