force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Cooling_Efficiency_CoP_P__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Efficiency_CoP_P__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cooling Efficiency Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>