force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Cooling_Sytem_Los__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Sytem_Los__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Cooling Sytem Loss Perf%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>