force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Core_Building_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Core_Building_Operating_Hours__c</fullName>
    <label>Core Building Operating Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>24/7</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Double Shift</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>7 day</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>GSA Standard</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Short</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>