force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/CostParameterFY__c.field-meta.xml
<CustomField>
    <fullName>CostParameterFY__c</fullName>
    <formula>NCMT_Project__r.Cost_Parameter_Date_FY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CostParameterFY</label>
    <type>Text</type>
</CustomField>