force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Default_Insolation__c.field-meta.xml
<CustomField>
    <fullName>Default_Insolation__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Insolation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>