force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/E9__c.field-meta.xml
<CustomField>
    <fullName>E9__c</fullName>
    <formula>(1 *  Lightning_Control_Cost_Modifier_2__c *  Lightning_Systems_Cost_Modifier__c * 1)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E9</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>