force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Enthalpy__c.field-meta.xml
<CustomField>
    <fullName>Enthalpy__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enthalpy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>