force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Fan_Efficiency_Perf__c.field-meta.xml
<CustomField>
    <fullName>Fan_Efficiency_Perf__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fan Efficiency Perf (KBtu/SF)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>