force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Heating_Eff_Cost_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Heating_Eff_Cost_Modifier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Heating Eff. Cost Modifier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>