force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Heating_System_Loss_Cost__c.field-meta.xml
<CustomField>
    <fullName>Heating_System_Loss_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Heating System Loss Cost %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>