force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Index_Location__c.field-meta.xml
<CustomField>
    <fullName>Index_Location__c</fullName>
    <formula>NCMT_Project__r.Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Location</label>
    <type>Text</type>
</CustomField>