force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Is_Non_Portable_Water_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Portable_Water_Available__c</fullName>
    <label>Is Non-Portable Water Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>0.0</fullName>
                <default>true</default>
                <label>For Landscaping</label>
            </value>
            <value>
                <fullName>0.3</fullName>
                <label>For Landscaping &amp; Building</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>