force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Lighting_control__c.field-meta.xml
<CustomField>
    <fullName>Lighting_control__c</fullName>
    <label>Lighting control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State of the art</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>ASHRAE 90.1</fullName>
                <default>true</default>
                <label>ASHRAE 90.1</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Outdated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>