force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Lighting_control_P__c.field-meta.xml
<CustomField>
    <fullName>Lighting_control_P__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>Lighting Control Perf %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>