force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Lighting_design_P__c.field-meta.xml
<CustomField>
    <fullName>Lighting_design_P__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Lighting Systems Perf %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>