force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Lightning_Systems_Cost_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Systems_Cost_Modifier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lightning Systems Cost Modifier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>