force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>TCO Performance Input</relationshipLabel>
    <relationshipName>TCO_Performance_Input</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>