force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Nominal_R_Value_Wall__c.field-meta.xml
<CustomField>
    <fullName>Nominal_R_Value_Wall__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nominal R Value Wall</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>