force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Off_Hours_Set_Back__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Set_Back__c</fullName>
    <label>Off Hours Set Back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>No Setback</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80%</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60%</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40%</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20%</label>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>Off</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>