force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Off_Hours_Set_Back_P__c.field-meta.xml
<CustomField>
    <fullName>Off_Hours_Set_Back_P__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Off Hours Set Back %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>