force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Plug_load_management_P__c.field-meta.xml
<CustomField>
    <fullName>Plug_load_management_P__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Plug load management Perf %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>