force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Project_Level_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Project_Level_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Level Parameter</label>
    <referenceTo>Project_Level_Parameter__c</referenceTo>
    <relationshipLabel>TCO Performance Input</relationshipLabel>
    <relationshipName>TCO_Performance_Input</relationshipName>
    <type>Lookup</type>
</CustomField>