force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/R_Energy_Site__c.field-meta.xml
<CustomField>
    <fullName>R_Energy_Site__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site array</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>