force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Renewable_Energy__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Energy__c</fullName>
    <defaultValue>0.08</defaultValue>
    <label>Renewable Energy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>