force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Roof_Perf__c.field-meta.xml
<CustomField>
    <fullName>Roof_Perf__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Roof Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>