force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Supplies_Cost_Mod__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Cost_Mod__c</fullName>
    <label>Cleaning Supplies Cost Modifier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>