force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Total_Btu_GSF_per_year__c.field-meta.xml
<CustomField>
    <fullName>Total_Btu_GSF_per_year__c</fullName>
    <formula>IF(Project_Level_Parameter__r.NCMT_Project__r.Total_GSF__c ==0,0,
((( Insolation__c *  (  Glazing_SHG_Perf__c  *(1-0.2)) * ( Project_Level_Parameter__r.Glazing_Ratio_SF__c/4))*365)/ Project_Level_Parameter__r.NCMT_Project__r.Total_GSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Btu/GSF per year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>