force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Total_Btu_h_F__c.field-meta.xml
<CustomField>
    <fullName>Total_Btu_h_F__c</fullName>
    <formula>(Project_Level_Parameter__r.Total_Roof_Area_SF__c /  Roof_Perf__c)+ (( Project_Level_Parameter__r.Finished_Wall_Area_SF__c -  Project_Level_Parameter__r.Glazing_Ratio_SF__c)/ Wall_Act_Perf__c )+ ( Project_Level_Parameter__r.Glazing_Ratio_SF__c /  Glazing_R_Perf__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Btu/h.F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>