force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Total_CDD_Btu_CF__c.field-meta.xml
<CustomField>
    <fullName>Total_CDD_Btu_CF__c</fullName>
    <formula>((round( CDD__c /365,4) - 3) * 0.019867327) + ( Enthalpy__c * 0.08102)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CDD Btu/CF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>