force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Total_HDD_Btu_CF__c.field-meta.xml
<CustomField>
    <fullName>Total_HDD_Btu_CF__c</fullName>
    <formula>(round( HDD__c /365,4) + 3) * 0.019867327</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total HDD Btu/CF</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>