force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Total_HDD_Btu_GSF_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Total_HDD_Btu_GSF_per_hour__c</fullName>
    <formula>IF(Project_Level_Parameter__r.NCMT_Project__r.Total_GSF__c == 0,0,
((Total_Btu_h_F__c * (round( HDD__c /365,4) + 3))/ Project_Level_Parameter__r.NCMT_Project__r.Total_GSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total HDD Btu/GSF per hour</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>