force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Wall_Nom_Perf__c.field-meta.xml
<CustomField>
    <fullName>Wall_Nom_Perf__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wall Nom - Perf</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>