force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Workplace_Eff_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Eff_Modifier__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Workplace Eff. Modifier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>