force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/Workplace_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Workplace_Efficiency__c</fullName>
    <label>Workplace Efficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>GSA Standard</fullName>
                <default>true</default>
                <label>GSA Standard</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>