force-app/main/default/objects/NCMT_TCO_Performance_Input__c/fields/X100_Electric__c.field-meta.xml
<CustomField>
    <fullName>X100_Electric__c</fullName>
    <label>100% Electric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>